--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Christopher Sato
 logo: /assets/img/linkedin_headshot.jpg
-
+description: GitHub Project Portfolio
 theme: jekyll-theme-minimal
